--- a/Package.json
+++ b/Package.json
@@ -16,11 +16,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fbsamples/graph-api-webhooks-samples"
+    "url": "https://buat-halaman-bisnis-kamu.github.io/Facebook-Developer/"
   },
   "keywords": [
-    "node",
-    "heroku",
+    "Index",
+    "Index.txt",
     "express",
     "graph api"
   ],
