--- a/.github/workflows/developers.yml
+++ b/.github/workflows/developers.yml
@@ -1,7 +1,11 @@
-https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer.wiki.git
+[Gabung Sekarang](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer.wiki.git)
+
+![pindai Kode](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer/blob/master/Dock/suplayergo9_nametag.png)
+
 # Facebook-Developer
 Mempromosikan pendidikan, mendorong inovasi, dan membangun komunitas.
- ![Img](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer/blob/master/Screenshot_2020-06-19-11-44-56.jpg)
+ 
+![Img](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer/blob/master/Screenshot_2020-06-19-11-44-56.jpg)
 
 # Untuk Memulai 
 
