--- a/.github/workflows/developers.yml
+++ b/.github/workflows/developers.yml
@@ -1,4 +1,4 @@
-[Gabung Sekarang](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer.wiki.git)
+----------> [Gabung Sekarang](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer.wiki.git)
 
 ![pindai Kode](https://github.com/Buat-Halaman-Bisnis-Kamu/Facebook-Developer/blob/master/Dock/suplayergo9_nametag.png)
 
