--- a/.github/Plugin.yml
+++ b/.github/Plugin.yml
@@ -1,2 +1,2 @@
-<div id="fb-root"></div>
+$ <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v8.0&appId=701909577290417&autoLogAppEvents=1" nonce="uJBX0vy9"></script>
